fix overflow

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,7 @@ header {
   background-color: #1e272e;
   color: white;
   border-bottom: 4px solid #ff3f34;
+  height: 71px;
 }
 ul {
   display: flex;
